Fix 'Our approach' block paddings on mobile device.

--- a/src/css/sass/home_page.sass
+++ b/src/css/sass/home_page.sass
@@ -175,10 +175,10 @@ $company_background_mobile: url(../img/home_company_mobile.png)
         .our-approach__content
             text-align: left
             padding-bottom: 50px
-            @media (max-width: $screen-sm-min)
-                margin: auto
-                width: 280px
+            margin: auto
+            width: 270px
             @media (min-width: $screen-sm-min)
+                width: 100%
                 text-align: center
                 padding-bottom: 160px
             .our-approach__block
